fix spacing

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,6 +15,6 @@ footer{
 }
 
 main{
-  padding-top: 4rem;
+  padding-top: 7rem;
   padding-bottom: 4rem;
 }
